--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-hook-babel",
-  "version": "5.0.1",
+  "version": "6.1.18",
   "description": "Sails JS hook to activate babel for the whole api folder",
   "main": "index.js",
   "scripts": {
@@ -32,8 +32,9 @@
     "isHook": true
   },
   "dependencies": {
-    "babel-core": "^6.1.2",
-    "babel-preset-es2015": "^6.1.2"
+    "babel-core": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-react": "^6.1.18"
   },
   "devDependencies": {
     "glob": "^5.0.3",
@@ -43,6 +44,9 @@
   "contributors": [
     {
       "name": "Markus Padourek"
+    },
+    {
+      "name": "Sky Wickenden"
     }
   ]
 }
