--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "babel-core": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
-    "babel-react": "^6.1.18"
+    "babel-preset-react": "^6.1.18"
   },
   "devDependencies": {
     "glob": "^5.0.3",
